added jumbotron, form, and card structures

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>the Sorting Hat</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -10,7 +10,32 @@
 </head>
 <body>
 
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to Hogwarts!</h1>
+            <p class="lead">Are you afraid of what you'll hear?
+                    Afraid I'll speak the name you fear?
+                    Not Slytherin! Not Gryffindor!
+                    Not Hufflepuff! Not Ravenclaw!
+                    Don't worry, child, I know my job,
+                    You'll learn to laugh, if first you sob.
+                    --Hogwarts Sorting Hat, 2019</p>
+            <hr class="my-4">
+            <p>"Finally, I wrote a list of the ways in which people can be chosen: eeny-meeny-miny-mo, short straws, chosen by team captains, names out of a hat - names out of a talking hat - putting on a hat - the Sorting Hat!"
+                    —J. K. Rowling</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Get Sorted</a>
+            </p>
+        </div>
 
+            <form>
+                <div class="row">
+                    <div class="col">
+                    <input type="text" class="form-control" placeholder="Full Name">
+                    </div>
+                <button type="submit" class="btn btn-dark">Sort Me!</button>
+            </form>
+
+    <div id="studentCard"></div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
