button click and form

--- a/index.html
+++ b/index.html
@@ -23,19 +23,13 @@
             <p>"Finally, I wrote a list of the ways in which people can be chosen: eeny-meeny-miny-mo, short straws, chosen by team captains, names out of a hat - names out of a talking hat - putting on a hat - the Sorting Hat!"
                     —J. K. Rowling</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Get Sorted</a>
+                <a class="btn btn-primary btn-lg" id="beginButton" role="button">Begin!</a>
             </p>
         </div>
 
-            <form>
-                <div class="row">
-                    <div class="col">
-                    <input type="text" class="form-control" placeholder="Full Name">
-                    </div>
-                <button type="submit" class="btn btn-dark">Sort Me!</button>
-            </form>
+        <div id="getSortedForm"></div>
 
-    <div id="studentCard"></div>
+        <div id="studentCard"></div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
