printed house and student name to page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-        <div class="jumbotron">
+        <div class="jumbotron" id="welcome">
             <h1 class="display-4">Welcome to Hogwarts!</h1>
             <p class="lead">Are you afraid of what you'll hear?
                     Afraid I'll speak the name you fear?
