--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>the Sorting Hat</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
 
         <div class="jumbotron" id="welcome">
             <h1 class="display-4">Welcome to Hogwarts!</h1>
-            <p class="lead">Are you afraid of what you'll hear?
-                    Afraid I'll speak the name you fear?
-                    Not Slytherin! Not Gryffindor!
-                    Not Hufflepuff! Not Ravenclaw!
-                    Don't worry, child, I know my job,
-                    You'll learn to laugh, if first you sob.
-                    --Hogwarts Sorting Hat, 2019</p>
+            <p class="lead">Are you afraid of what you'll hear?<br>
+                    Afraid I'll speak the name you fear?<br>
+                    Not Slytherin! Not Gryffindor!<br>
+                    Not Hufflepuff! Not Ravenclaw!<br>
+                    Don't worry, child, I know my job,<br>
+                    You'll learn to laugh, if first you sob.<br>
+                    -Hogwarts Sorting Hat, 2019</p>
             <hr class="my-4">
-            <p>"Finally, I wrote a list of the ways in which people can be chosen: eeny-meeny-miny-mo, short straws, chosen by team captains, names out of a hat - names out of a talking hat - putting on a hat - the Sorting Hat!"
+            <p>"Finally, I wrote a list of the ways in which people can be chosen: eeny-meeny-miny-mo, short straws,<br> chosen by team captains, names out of a hat - names out of a talking hat - putting on a hat - the Sorting Hat!"
                     —J. K. Rowling</p>
             <p class="lead">
                 <a class="btn btn-primary btn-lg" id="beginButton" role="button">Begin!</a>
