made minor changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <!-- <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Largoet-Castle-4.jpg/1200px-Largoet-Castle-4.jpg" alt="image of a medival castle" class="img-thumbnail"> -->
 </head>
 <body>
-
+    <div class="container">
         <div class="jumbotron" id="welcome">
             <h1 class="display-4">Welcome to Hogwarts!</h1>
             <p class="lead">Are you afraid of what you'll hear?<br>
@@ -27,6 +28,7 @@
                 <a class="btn btn-primary btn-lg" id="beginButton" role="button">Begin!</a>
             </p>
         </div>
+    </div>
 
         <div id="getSortedForm"></div>
 
